# TerraModulus-Ferricia-Engine

./: Cargo.toml  README.md  bench_collision.ps1
benches/: collisions.rs
examples/: physics_collision.rs
src/: lib.rs  mui.rs  phy.rs  util.rs
src/mui/: ogl.rs  rendering.rs  rendering3d.rs  window.rs
src/phy/: ode.rs
