[package]
name = "terramodulus-ferricia-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"

[profile.release]
panic = "unwind"

[profile.dev]
panic = "unwind"
debug = true

[lib]
name = "ferricia"
crate-type = ["cdylib", "rlib"]

[dependencies]
opusic-sys = "0.5.5"
libflac-sys = "0.3"
sdl3 = { version = "0.14.27", features = ["build-from-source", "build-from-source-unix-console"] }
ode-sys = { path = "ode" }
openal-soft-sys = { path = "openal-soft" }
gl = "0.14.0"
opencl3 = "0.12.0"
icu = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.18", features = ["blocking", "json"] }
futures = "0.3.30"
chrono = "0.4.0"
rand = "0.9.1"
crossbeam = "0.8"
sevenz-rust = { version = "0.6.0", features = ["compress"] }
time = { version = "0.3.36", features = ["serde", "serde-well-known"] }
tokio = { version = "1.45.1", features = ["full"] }
fs4 = "0.13.1"
getset = "0.1.2"
zip = "4.0.0"
sysinfo = "0.35.1"
jni = "0.21.1"
derive_more = { version =  "2.0.1", features = ["full"] }
semver = "1.0.26"
regex = "1.11.1"
paste = "1.0.15"
image = "0.25.6"
nalgebra-glm = "0.19.0"
num-traits = "0.2.19"
ordermap = "0.5.2"
by_address = "1.2.1"
array-macro = "2.1.8"
csgrs = { version =  "0.20.1", default-features = false, features = ["f32", "delaunay", "offset"] }
bytemuck = "1.25.0"

[target.'cfg(windows)'.dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[target.'cfg(unix)'.dev-dependencies]
# pprof does not support >=0.6
criterion = { version = "0.5.1", features = ["html_reports"] }
pprof = { version = "0.15.0", features = ["criterion", "flamegraph"] }

[[bench]]
name = "collisions"
harness = false

[features]
client = []
server = []
